fix: modernize hidden composer clipping

--- a/components/coach-chat.module.css
+++ b/components/coach-chat.module.css
@@ -775,7 +775,10 @@
   width: 1px;
   height: 1px;
   overflow: hidden;
-  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  margin: -1px;
+  border: 0;
+  padding: 0;
   white-space: nowrap;
 }
 
@@ -825,7 +828,10 @@
     width: 1px;
     height: 1px;
     overflow: hidden;
-    clip: rect(0 0 0 0);
+    clip-path: inset(50%);
+    margin: -1px;
+    border: 0;
+    padding: 0;
     white-space: nowrap;
   }
 
